objects/nFORMS__Form_Template_Route_Group_Configuration__c.object
<CustomObject>
    <description>The configuration object that associates a form template to a route group.</description>
    <fields>
        <fullName>nFORMS__Form_Template__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The system automatically populates this required lookup field to associate a form template to a route group, for Document Generation.</description>
        <inlineHelpText>The Form Template is associated to a route group.</inlineHelpText>
        <label>Form Template</label>
        <referenceTo>nFORMS__Form_Template__c</referenceTo>
        <relationshipLabel>Template Configurations</relationshipLabel>
        <relationshipName>Template_Configurations</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nFORMS__Route_Group__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The system automatically populates this required lookup field to associate a route group to a form template, for Document Generation.</description>
        <inlineHelpText>The route group is associated to a form template.</inlineHelpText>
        <label>Route Group</label>
        <referenceTo>nFORCE__Route_Group__c</referenceTo>
        <relationshipLabel>Template Configurations</relationshipLabel>
        <relationshipName>Template_Configurations</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nFORMS__lookupKey__c</fullName>
        <description>The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records, when importing data into nCino, without the need to know the internal ID for the record.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Form Template Route Group Configuration</label>
    <nameField>
        <displayFormat>FTRGC-{0000000000}</displayFormat>
        <label>Form Template Route Group Config Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Form Template Route Group Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>